--- a/src/content/pages/BusinessAI.mdx
+++ b/src/content/pages/BusinessAI.mdx
@@ -2,4 +2,6 @@
 title: "Business AI Chat"
 ---
 
+import '../../styles/zstyle.scss';
+
 <iframe src="https://ai-chat-app.businessesai.net/"></iframe>
