--- a/src/content/pages/BusinessAI.mdx
+++ b/src/content/pages/BusinessAI.mdx
@@ -2,6 +2,6 @@
 title: "Business AI Chat"
 ---
 
-import '../../styles/zstyle.scss';
+<link href="../../styles/zstyle.scss" rel="stylesheet" />
 
 <iframe src="https://ai-chat-app.businessesai.net/"></iframe>
